--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilo.style.css">
 </head>
 <body>
     <header>
-       <h1>Título</h1>
+       <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-            testando 1
+            <p>Número: <input type="number" name="numero" id="txtn">
+            <input type="button" value="Gerar Tabuada" onclick="gerar()">
+            </p>
         </div>
         <div>
-            testando 2
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número acima:</option>
+            </select>
         </div>
     </section>
     <footer>
         <p>&copy; Cursoemvídeo </p>
     </footer>
     <script src="script.js">
-        
     </script>
 </body>
 </html>
